<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_actions_fortuneteller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dayBackground2"
    tools:context=".Frag_Actions_FortuneTeller">


    <TextView
        android:id="@+id/textViewFortunetellerRole"
        android:text="@string/fortuneteller_role"
        app:layout_constraintBottom_toTopOf="@id/textViewFortunetellerOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/description_textView"></TextView>


    <TextView
        android:id="@+id/textViewFortunetellerOrder"
        style="@style/option_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/fortuneteller_order"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPassFortuneTeller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewFortunetellerRole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFortunetellerRole"></TextView>

    <Button
        android:id="@+id/buttonChoose"
        style="@style/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fortuneteller_action_button_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPassFortuneTeller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFortunetellerOrder"></Button>

    <Button
        android:id="@+id/buttonPassFortuneTeller"
        style="@style/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/fortuneteller_action_button_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonChoose"
        app:layout_constraintTop_toBottomOf="@+id/textViewFortunetellerOrder"></Button>

    <LinearLayout
        android:id="@+id/tellerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>